--- a/restauran copy 4.html
+++ b/restauran copy 4.html
@@ -9,14 +9,14 @@
 </head>
 <style>
     :root {
-  --primary-color2: #ff9f1c;
-  --secondary-color2: #ffbf69;
-  --light-color2: #fffaf2;
-  --dark-color2: #333;
-  --gray-color2: #666;
-  --light-gray2: #f0f0f0;
-  --shadow2: 0 4px 12px rgba(0,0,0,0.1);
-  --transition2: all 0.3s ease;
+  --primary-color: #ff9f1c;
+  --secondary-color: #ffbf69;
+  --light-color: #fffaf2;
+  --dark-color: #333;
+  --gray-color: #666;
+  --light-gray: #f0f0f0;
+  --shadow: 0 4px 12px rgba(0,0,0,0.1);
+  --transition: all 0.3s ease;
 }
 
 body {
