--- a/allproduct.html
+++ b/allproduct.html
@@ -756,7 +756,7 @@ body {
 <body>
     <!-- Header Section -->
     <header class="header-section">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row align-items-center py-3">
                 <div class="col-md-6">
                     <div class="d-flex align-items-center">
@@ -796,7 +796,7 @@ body {
     </header>
 
     <!-- Main Content -->
-    <div class="container-fluid main-content">
+    <div class="container main-content">
         <div class="row">
             <!-- Sidebar -->
             <div class="col-lg-3 col-md-4">
