--- a/restauran.html
+++ b/restauran.html
@@ -1318,6 +1318,8 @@
               </div>
             </div>
           </div>
+    <a id="shwoall"  class="cart-btn2 text-center" href="./allproduct.html"> See ALL <i class="fa-solid fa-arrow-right fa-lg"></i> </a>
+
         </div>
 
         <!-- <div class="cart-summary">
@@ -1327,8 +1329,12 @@
     </div>
     <div class="cart-total">$0.00</div>
   </div> -->
-      </div>
+     
+
+</div>
     </section>
+
+
 
     <!-- Promo Section -->
     <section id="promo" class="promo-section">
@@ -1349,22 +1355,22 @@
           <div class="col-lg-6">
             <div class="countdown-timer">
               <div class="timer-item">
-                <span class="timer-number" id="days">95</span>
+                <span class="timer-number" id="days">00</span>
                 <span class="timer-label">Days</span>
               </div>
               <div class="timer-separator">:</div>
               <div class="timer-item">
-                <span class="timer-number" id="hours">16</span>
+                <span class="timer-number" id="hours">00</span>
                 <span class="timer-label">Hours</span>
               </div>
               <div class="timer-separator">:</div>
               <div class="timer-item">
-                <span class="timer-number" id="minutes">32</span>
+                <span class="timer-number" id="minutes">00</span>
                 <span class="timer-label">Minutes</span>
               </div>
               <div class="timer-separator">:</div>
               <div class="timer-item">
-                <span class="timer-number" id="seconds">15</span>
+                <span class="timer-number" id="seconds">00</span>
                 <span class="timer-label">Seconds</span>
               </div>
             </div>
