--- a/restauran.html
+++ b/restauran.html
@@ -1321,14 +1321,24 @@
     <a id="shwoall"  class="cart-btn2 text-center" href="./allproduct.html"> See ALL <i class="fa-solid fa-arrow-right fa-lg"></i> </a>
 
         </div>
-
-        <!-- <div class="cart-summary">
+<!-- 
+        <div class="cart-summary">
     <div class="cart-icon">
       <i class="fas fa-shopping-cart fa-lg"></i>
       <span class="cart-count">0</span>
     </div>
     <div class="cart-total">$0.00</div>
-  </div> -->
+  </div>
+      -->
+
+<div class="cart-summary" id="cartSummary">
+  <div class="cart-icon">
+    <i class="fas fa-shopping-cart fa-lg"></i>
+    <span class="cart-count" id="cartCount">0</span>
+  </div>
+  <div class="cart-total" id="cartTotalMini">$0.00</div>
+</div>
+
      
 
 </div>
