--- a/restauran.html
+++ b/restauran.html
@@ -58,7 +58,11 @@
           <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand logo" href="#home">Fazfood</a>
-
+            
+              <button class="cart-btn" id="cartBtn">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span class="cart-badge" id="cartBadge">0</span>
+                  </button>
             <!-- Mobile Menu Toggle -->
             <button
               class="navbar-toggler"
