--- a/restauran.html
+++ b/restauran.html
@@ -58,11 +58,6 @@
           <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand logo" href="#home">Fazfood</a>
-            
-              <button class="cart-btn" id="cartBtn">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-badge" id="cartBadge">0</span>
-                  </button>
             <!-- Mobile Menu Toggle -->
             <button
               class="navbar-toggler"
@@ -1929,6 +1924,7 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Slick Slider JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
